add initial project files and configuration for SvelteKit with Tailwind CSS

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ node_modules
 .vercel
 .netlify
 .wrangler
-/.svelte-kit
+.svelte-kit
+.idea
 /build
 
 # OS
@@ -21,5 +22,3 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-
-/.idea
