--- a/workplaces/p2p-console-viewer-console/package.json
+++ b/workplaces/p2p-console-viewer-console/package.json
@@ -32,7 +32,6 @@
 		"svelte-check": "^4.3.3",
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.1",
-		"vite": "^7.1.10"
+		"typescript-eslint": "^8.46.1"
 	}
 }
