--- a/workplaces/p2p-console-viewer-lib/package.json
+++ b/workplaces/p2p-console-viewer-lib/package.json
@@ -1,8 +1,10 @@
 {
   "name": "p2p-console-viewer-lib",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
+  "main": "./src/public-api.js",
+  "files": ["./src/**.js"],
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -11,9 +13,7 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "ws": "^8.18.3"
-  },
-  "dependencies": {
+    "ws": "^8.18.3",
     "uuid": "^13.0.0"
   }
 }
