add ConsoleInterceptor and update P2PSignalingClient to handle inbound messages

--- a/workplaces/p2p-console-viewer-lib/package.json
+++ b/workplaces/p2p-console-viewer-lib/package.json
@@ -1,13 +1,16 @@
 {
   "name": "p2p-console-viewer-lib",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "./src/public-api.js",
-  "files": ["./src/**.js"],
+  "files": ["./src/**.js", "./types/**.d.ts"],
+  "types": "./types/public-api.d.ts",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
+    "type-gen": "npx -p typescript tsc src/**/*.js --declaration --allowJs --emitDeclarationOnly --outDir types",
+    "prepack": "npm run type-gen",
     "preview": "vite preview"
   },
   "devDependencies": {
