--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/FooVoo/p2p-console-viewer.git"
   },
-  "author": "",
+  "author": "FooVoo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/FooVoo/p2p-console-viewer/issues"
