refactor: rename example files and update type generation script in package.json

--- a/workplaces/p2p-console-viewer-lib/package.json
+++ b/workplaces/p2p-console-viewer-lib/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "type-gen": "npx -p typescript tsc src/**/*.js --declaration --allowJs --emitDeclarationOnly --outDir types",
+    "type-gen": "npx -p typescript tsc src/*.js --declaration --allowJs --emitDeclarationOnly --outDir types",
     "prepack": "npm run type-gen",
     "preview": "vite preview"
   },
