--- a/workplaces/p2p-console-viewer-server/package.json
+++ b/workplaces/p2p-console-viewer-server/package.json
@@ -18,8 +18,9 @@
   "author": "FooVoo",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "ws": "^8.18.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "ws": "^8.18.3"
   }
 }
